# jax_alqp

./: README.md  pyproject.toml
jax_alqp/: solver.py  sparse.py
test/: simple_qp.py  sparse.py
